# Hackathon-phase-1-and-2

./: .gitattributes  .gitignore  IMPLEMENTATION_ROADMAP.md  INDEX.md  PHASE_II_IMPLEMENTATION_PLAN.md  PHASE_II_README.md  PHASE_II_SUMMARY.md  README.md  package-lock.json
.claude/.claude-code-router/: config.json
.claude/.claude-code-router/agents/: agent-definition-helper.md
.claude/.claude-code-router/agents/commands/: sp.constitution.md  sp.specify.md
.claude/.claude-code-router/agents/commands/src/: __init__.py  main.py  models.py  todo_service.py  utils.py
.specify/memory/: constitution.md
backend/: .env  .env.example  README.md  alembic.ini  config_test.py  db_check.py  debug_server.py  debug_task.py  fix_db_schema.py  full_test.py  jwt_test.py  pyproject.toml  requirements.txt  signup_task_test.py  signup_task_test_fixed.py  test_api.py  test_chatbot.py  test_fix.py  test_new_endpoint.py  todo.db  token_test.py
backend/.pytest_cache/v/: lastfailed  nodeids
backend/_pycache/alembic/: env.py
backend/_pycache/alembic/src/auth/: jwt.py  models.py  refresh_token_model.py  routes.py  schemas.py  security.py  service.py  signup_with_task.py
backend/_pycache/alembic/src/chatbot/: ai_agent_service.py  conversation_models.py  models.py  routes.py
backend/_pycache/alembic/src/mcp_server/: server.py
backend/_pycache/alembic/src/middleware/: auth.py
backend/_pycache/alembic/src/task/: models.py  routes.py  schemas.py  service.py
